# telegram_bot_cpp

./: .gitignore  CMakeLists.txt  README.md  todo.org
include/: bot.hpp
include_local/: chat.hpp  http.hpp  message.hpp  update.hpp  user.hpp
src/: bot.cpp  bot.hpp  http.cpp  http.hpp  main.cpp  tools.hpp
src/api/: getMe.cpp  getUpdates.cpp  sendMessage.cpp
src/chat/: chat.cpp
src/message/: message.cpp
src/test/: main.cpp
src/tools/: http.cpp  tools.cpp
src/update/: update.cpp
src/user/: user.cpp
